feat: Added new endpoint _/status_
- New endpoint to be able to check whether the backend still receives messages
- Split endpoints into own mod
- Updated openapi.yml
